WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170485
B3::fixSSA() needs a tune-up
https://bugs.webkit.org/show_bug.cgi?id=170485
Summary
B3::fixSSA() needs a tune-up
Filip Pizlo
Reported
2017-04-04 16:35:40 PDT
Patch forthcoming.
Attachments
the patch
(32.44 KB, patch)
2017-04-04 16:40 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-04-04 16:40:51 PDT
Created
attachment 306230
[details]
the patch
Build Bot
Comment 2
2017-04-04 16:42:50 PDT
Attachment 306230
[details]
did not pass style-queue: ERROR: Source/WTF/wtf/IndexSparseSet.h:204: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2017-04-04 17:14:26 PDT
Comment on
attachment 306230
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306230&action=review
r=me
> Source/JavaScriptCore/ChangeLog:10 > + changes to make this phase run faster. This is a ~7% wasm -O1 compile time progression.
awesome
> Source/WTF/wtf/IndexSparseSet.h:47 > + typedef T EntryType;
style nit: can be "using".
> Source/WTF/wtf/IndexSparseSet.h:57 > + static T create(T entry) > + { > + return entry; > + } > + > + static T key(T entry) > + { > + return entry; > + }
maybe these should take "const T& entry"?
> Source/WTF/wtf/IndexSparseSet.h:62 > + typedef KeyValuePair<KeyType, ValueType> EntryType;
ditto on "using".
Filip Pizlo
Comment 4
2017-04-04 17:22:36 PDT
(In reply to Saam Barati from
comment #3
)
> Comment on
attachment 306230
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=306230&action=review
> > r=me > > > Source/JavaScriptCore/ChangeLog:10 > > + changes to make this phase run faster. This is a ~7% wasm -O1 compile time progression. > > awesome > > > Source/WTF/wtf/IndexSparseSet.h:47 > > + typedef T EntryType; > > style nit: can be "using". > > > Source/WTF/wtf/IndexSparseSet.h:57 > > + static T create(T entry) > > + { > > + return entry; > > + } > > + > > + static T key(T entry) > > + { > > + return entry; > > + } > > maybe these should take "const T& entry"?
I'll clean this up.
> > > Source/WTF/wtf/IndexSparseSet.h:62 > > + typedef KeyValuePair<KeyType, ValueType> EntryType; > > ditto on "using".
I still like typedef in those cases where it's legal. Do we have to switch to using?
Filip Pizlo
Comment 5
2017-04-04 17:25:55 PDT
Landed in
https://trac.webkit.org/changeset/214917/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug