Source/WTF/wtf/IndexSparseSet.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All Rights Reserved.
+ * Copyright (C) 2015-2017 Apple Inc. All Rights Reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,6 +26,7 @@
 #ifndef IndexSparseSet_h
 #define IndexSparseSet_h
 
+#include <wtf/HashTraits.h>
 #include <wtf/Vector.h>
 
 namespace WTF {
@@ -41,19 +42,55 @@ namespace WTF {
 // The assumption here is that we only need a sparse subset of number live at any
 // time.
 
-template<typename OverflowHandler = CrashOnOverflow>
+template<typename T>
+struct DefaultIndexSparseSetTraits {
+    typedef T EntryType;
+    
+    static T create(unsigned entry)
+    {
+        return entry;
+    }
+    
+    static unsigned key(const T& entry)
+    {
+        return entry;
+    }
+};
+
+template<typename KeyType, typename ValueType>
+struct DefaultIndexSparseSetTraits<KeyValuePair<KeyType, ValueType>> {
+    typedef KeyValuePair<KeyType, ValueType> EntryType;
+
+    template<typename PassedValueType>
+    static EntryType create(unsigned key, PassedValueType&& value)
+    {
+        return EntryType(key, std::forward<PassedValueType>(value));
+    }
+    
+    static unsigned key(const EntryType& entry)
+    {
+        return entry.key;
+    }
+};
+
+template<typename EntryType = unsigned, typename EntryTypeTraits = DefaultIndexSparseSetTraits<EntryType>, typename OverflowHandler = CrashOnOverflow>
 class IndexSparseSet {
-    typedef Vector<unsigned, 0, OverflowHandler> ValueList;
+    typedef Vector<EntryType, 0, OverflowHandler> ValueList;
 public:
     explicit IndexSparseSet(unsigned size);
 
-    bool add(unsigned);
+    template<typename... Arguments>
+    bool add(unsigned, Arguments&&...);
+    template<typename... Arguments>
+    bool set(unsigned, Arguments&&...);
     bool remove(unsigned);
     void clear();
 
     unsigned size() const;
     bool isEmpty() const;
     bool contains(unsigned) const;
+    const EntryType* get(unsigned) const;
+    EntryType* get(unsigned);
 
     typedef typename ValueList::const_iterator const_iterator;
     const_iterator begin() const;
@@ -68,35 +105,51 @@ private:
     ValueList m_values;
 };
 
-template<typename OverflowHandler>
-inline IndexSparseSet<OverflowHandler>::IndexSparseSet(unsigned size)
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+inline IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::IndexSparseSet(unsigned size)
 {
     m_map.resize(size);
 }
 
-template<typename OverflowHandler>
-inline bool IndexSparseSet<OverflowHandler>::add(unsigned value)
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+template<typename... Arguments>
+inline bool IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::add(unsigned value, Arguments&&... arguments)
 {
     if (contains(value))
         return false;
 
     unsigned newPosition = m_values.size();
-    m_values.append(value);
+    m_values.append(EntryTypeTraits::create(value, std::forward<Arguments>(arguments)...));
     m_map[value] = newPosition;
     return true;
 }
 
-template<typename OverflowHandler>
-inline bool IndexSparseSet<OverflowHandler>::remove(unsigned value)
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+template<typename... Arguments>
+inline bool IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::set(unsigned value, Arguments&&... arguments)
+{
+    if (EntryType* entry = get(value)) {
+        *entry = EntryTypeTraits::create(value, std::forward<Arguments>(arguments)...);
+        return false;
+    }
+
+    unsigned newPosition = m_values.size();
+    m_values.append(EntryTypeTraits::create(value, std::forward<Arguments>(arguments)...));
+    m_map[value] = newPosition;
+    return true;
+}
+
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+inline bool IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::remove(unsigned value)
 {
     unsigned position = m_map[value];
     if (position >= m_values.size())
         return false;
 
     if (m_values[position] == value) {
-        unsigned lastValue = m_values.last();
-        m_values[position] = lastValue;
-        m_map[lastValue] = position;
+        EntryType lastValue = m_values.last();
+        m_values[position] = WTFMove(lastValue);
+        m_map[EntryTypeTraits::key(lastValue)] = position;
         m_values.removeLast();
         return true;
     }
@@ -104,54 +157,79 @@ inline bool IndexSparseSet<OverflowHandler>::remove(unsigned value)
     return false;
 }
 
-template<typename OverflowHandler>
-void IndexSparseSet<OverflowHandler>::clear()
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+void IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::clear()
 {
     m_values.resize(0);
 }
 
-template<typename OverflowHandler>
-unsigned IndexSparseSet<OverflowHandler>::size() const
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+unsigned IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::size() const
 {
     return m_values.size();
 }
 
-template<typename OverflowHandler>
-bool IndexSparseSet<OverflowHandler>::isEmpty() const
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+bool IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::isEmpty() const
 {
     return !size();
 }
 
-template<typename OverflowHandler>
-bool IndexSparseSet<OverflowHandler>::contains(unsigned value) const
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+bool IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::contains(unsigned value) const
 {
     unsigned position = m_map[value];
     if (position >= m_values.size())
         return false;
 
-    return m_values[position] == value;
+    return EntryTypeTraits::key(m_values[position]) == value;
 }
 
-template<typename OverflowHandler>
-void IndexSparseSet<OverflowHandler>::sort()
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+auto IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::get(unsigned value) -> EntryType*
 {
-    std::sort(m_values.begin(), m_values.end());
+    unsigned position = m_map[value];
+    if (position >= m_values.size())
+        return nullptr;
+
+    EntryType& entry = m_values[position];
+    if (EntryTypeTraits::key(entry) != value)
+        return nullptr;
+    
+    return &entry;
 }
 
-template<typename OverflowHandler>
-auto IndexSparseSet<OverflowHandler>::begin() const -> const_iterator
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+auto IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::get(unsigned value) const -> const EntryType*
+{
+    return const_cast<IndexSparseSet*>(this)->get(value);
+}
+
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+void IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::sort()
+{
+    std::sort(
+        m_values.begin(), m_values.end(),
+        [&] (const EntryType& a, const EntryType& b) {
+            return EntryTypeTraits::key(a) < EntryTypeTraits::key(b);
+        });
+}
+
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+auto IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::begin() const -> const_iterator
 {
     return m_values.begin();
 }
 
-template<typename OverflowHandler>
-auto IndexSparseSet<OverflowHandler>::end() const -> const_iterator
+template<typename EntryType, typename EntryTypeTraits, typename OverflowHandler>
+auto IndexSparseSet<EntryType, EntryTypeTraits, OverflowHandler>::end() const -> const_iterator
 {
     return m_values.end();
 }
 
 } // namespace WTF
 
+using WTF::DefaultIndexSparseSetTraits;
 using WTF::IndexSparseSet;
 
 #endif // IndexSparseSet_h
